--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -21,6 +21,7 @@
             <div *ngFor="let item of items.feedList">
                 <article *ngIf="item.content_type == 'blog'" [articleInfo]="item"></article>
                 <diary *ngIf="item.content_type == 'diary'" [diaryInfo]="item"></diary>
+                <!-- <homevideo></homevideo> -->
             </div>
         </ion-slide>
         <!-- <ion-slide>
