--- a/src/pages/home/video/video.html
+++ b/src/pages/home/video/video.html
@@ -1,4 +1,4 @@
-<div style="margin-top: 10px;" (click)="goArticleDetail()">
+<div style="margin-top: 10px;">
     <div class="titleWrap">
         <div class="avatarWrap">
             <img [src]="articleInfo.avatar" style="width: 40px;height: 40px;">
@@ -6,14 +6,7 @@
         <span class="name">{{articleInfo.username}}</span>
         <span class="time">{{articleInfo.created_at | timeFormat1}}</span>
     </div>
-    <div class="imgWrap" [ngStyle]="{'background-image': 'url(' +  articleInfo.image_set[0] + ')'}">
-        <div class="imgText">
-            <div>#{{articleInfo.title}}#</div>
-        </div>
-    </div>
-    <div class="contentWrap">
-        {{articleInfo.prefetch_content}}
-    </div>
+    <video src="assets/1.mp4" controls="controls" style="width: 100%;" (click)="goDetail()"></video>
     <div class="dataWrap">
         <div style="float: left;">
             <img src="assets/img/fire.png" class="fireImg">
