--- a/src/pages/article-info/article-info.html
+++ b/src/pages/article-info/article-info.html
@@ -4,11 +4,6 @@
         <ion-title>
             {{title}}
         </ion-title>
-        <!-- <ion-buttons end>
-            <button ion-button clear (click)="saveDraft()">
-                存草稿
-            </button>
-        </ion-buttons> -->
         <ion-buttons end style="margin-right: 10px;">
             <button ion-button clear (click)="collection()">
                 <ion-icon name="star" class="star1" *ngIf="hasCollected"></ion-icon>
@@ -30,7 +25,9 @@
     <div class="acticle-scroll">
         <p class="scroll-text" [innerHTML]="info.text | safeHtml">
     </div>
-    <div class="acticle-reply" style="padding-bottom: 55px;">
+    <detailComment type="blog" [id]="globalId" *ngIf="globalId"></detailComment>
+    <div style="height: 55px;width: 100%;"></div>
+    <!-- <div class="acticle-reply" style="padding-bottom: 55px;">
         <div *ngFor="let item of user;index as i;" style="padding-top:10px;padding-bottom:10px;border-bottom:1px solid #DEDEDE;">
             <div class="reply-user">
                 <div class="reply-head">
@@ -40,24 +37,13 @@
                     <div class="reply-info">
                         <div (click)="goMe(item.userId)" class="name">{{item.userName}}</div>
                         <p class="time">{{item.time}}</p>
-                        <!-- <div class='reply-pp' [ngStyle]="{'background-color':item.sex === 0 ? '#ff3399' : '#488aff' }">{{item.pp}}匹配</div> -->
                     </div>
                     <p class="friend">好友</p>
                 </div>
-                <!-- <div>
-                    <span class="reply-text">
-                    <ion-icon ios="ios-thumbs-up" md="md-thumbs-up" style="color:#FF1A36;" *ngIf="item.commentZan"></ion-icon>
-                    <ion-icon ios="ios-thumbs-up-outline" md="ios-thumbs-up-outline" (click)="commentZan(item.id)" *ngIf="!item.commentZan"></ion-icon>&nbsp;{{item.zan}}&nbsp;&nbsp;</span>
-                    <span class="reply-text"><ion-icon ios="ios-thumbs-down-outline" md="ios-thumbs-down-outline"></ion-icon>{{item.fou}}</span>
-                    <span class="reply-text"><ion-icon ios="ios-chatbubbles-outline" md="ios-chatbubbles-outline"></ion-icon>&nbsp;{{item.info}}</span>
-                </div> -->
             </div>
             <div style="position: relative;padding-left: 46px;">
                 <p (click)="commentDetail(item.id)" class="replycontent">{{item.reply}}</p>
                 <div class="mainimg">
-                    <!-- <div *ngFor="let img of item.plimg" class="imgdiv">
-                        <img [src]="img">
-                    </div> -->
                     <ss-comment-attachments *ngIf="item.plimg.length" [attachments]="item.plimg" [bigImage]="true" style="width: 100%;"></ss-comment-attachments>
                 </div>
                 <div class="commentWrap">
@@ -109,17 +95,10 @@
             <ion-infinite-scroll-content loadingSpinner="bubbles" loadingText="加载中...">
             </ion-infinite-scroll-content>
         </ion-infinite-scroll>
-    </div>
-    <!-- <div class="article-wrp">
-        <div class="article-btn">
-            <button ion-button round color="ss-primary" (click)="makeComment()">
-                <ion-icon ios="ios-create-outline" md="ios-create-outline"></ion-icon>
-                <span>说说我的想法</span>
-            </button>
-        </div>
     </div> -->
     <div style="overflow: hidden;position: fixed;bottom: 0;left: 0;width: 100%;background-color: #fff;height: 50px;padding-top: 10px;padding-bottom: 10px;border-top: 1px solid #EAEAEA;">
-        <div style="float: left;width: 50%;display: inline-block;border-right:1px solid #EAEAEA;height: 30px;line-height: 30px;text-align: center;" (click)="makeComment()">
+        <div style="float: left;width: 50%;display: inline-block;border-right:1px solid #EAEAEA;height: 30px;line-height: 30px;text-align: center;"
+            (click)="makeComment()">
             <img src="assets/img/comment1.png" style="width: 21px;height: 21px;vertical-align: middle">
             <span style="font-size: 14px;color: #9F9F9F;margin-left: 5px;vertical-align: middle;">评论</span>
         </div>
