--- a/src/pages/home/mark/mark.html
+++ b/src/pages/home/mark/mark.html
@@ -1,6 +1,11 @@
 <ion-header>
     <ion-navbar>
         <ion-title>全部分类</ion-title>
+        <ion-buttons end>
+            <button ion-button clear (click)="finishEdit()" style="color: #F29292;font-size: 16px;">
+                完成
+            </button>
+        </ion-buttons>
     </ion-navbar>
 </ion-header>
 <ion-content>
