--- a/src/pages/diarymark/diarymark.html
+++ b/src/pages/diarymark/diarymark.html
@@ -12,29 +12,13 @@
     <div style="margin-top: 10px;">
         <p style="font-size: 13px;color: #C2C2C2;margin: 0;">一级标签（多选）</p>
         <div style="margin-top: 15px;">
-            <span style="font-size: 16px;color: #A6A6A6;display: inline-block;margin-right: 15px;margin-bottom: 10px;">演唱会</span>
-            <span style="font-size: 16px;color: #A6A6A6;display: inline-block;margin-right: 15px;margin-bottom: 10px;">演唱会</span>
-            <span style="font-size: 16px;color: #A6A6A6;display: inline-block;margin-right: 15px;margin-bottom: 10px;">演唱会</span>
-            <span style="font-size: 16px;color: #A6A6A6;display: inline-block;margin-right: 15px;margin-bottom: 10px;">演唱会</span>
-            <span style="font-size: 16px;color: #A6A6A6;display: inline-block;margin-right: 15px;margin-bottom: 10px;">演唱会</span>
-            <span style="font-size: 16px;color: #A6A6A6;display: inline-block;margin-right: 15px;margin-bottom: 10px;">演唱会</span>
-            <span style="font-size: 16px;color: #A6A6A6;display: inline-block;margin-right: 15px;margin-bottom: 10px;">演唱会</span>
-            <span style="font-size: 16px;color: #A6A6A6;display: inline-block;margin-right: 15px;margin-bottom: 10px;">演唱会</span>
-            <span style="font-size: 16px;color: #A6A6A6;display: inline-block;margin-right: 15px;margin-bottom: 10px;">演唱会</span>
+            <span style="font-size: 16px;color: #A6A6A6;display: inline-block;margin-right: 15px;margin-bottom: 10px;" *ngFor="let item of type1" (click)="selectTag1(item.code)">{{item.name}}</span>
         </div>
     </div>
-
     <div style="margin-top: 10px;">
         <p style="font-size: 13px;color: #C2C2C2;margin: 0;">二级标签（多选）</p>
         <div style="margin-top: 15px;">
-            <span style="font-size: 14px;display: inline-block;color: #A7A7A7;border:1px solid #ABABAB;border-radius: 3px;padding: 4px 8px;margin-right: 15px;margin-bottom: 10px;">中国风</span>
-            <span style="font-size: 14px;display: inline-block;color: #A7A7A7;border:1px solid #ABABAB;border-radius: 3px;padding: 4px 8px;margin-right: 15px;margin-bottom: 10px;">中国风</span>
-            <span style="font-size: 14px;display: inline-block;color: #A7A7A7;border:1px solid #ABABAB;border-radius: 3px;padding: 4px 8px;margin-right: 15px;margin-bottom: 10px;">中国风</span>
-            <span style="font-size: 14px;display: inline-block;color: #A7A7A7;border:1px solid #ABABAB;border-radius: 3px;padding: 4px 8px;margin-right: 15px;margin-bottom: 10px;">中国风</span>
-            <span style="font-size: 14px;display: inline-block;color: #A7A7A7;border:1px solid #ABABAB;border-radius: 3px;padding: 4px 8px;margin-right: 15px;margin-bottom: 10px;">中国风</span>
-            <span style="font-size: 14px;display: inline-block;color: #A7A7A7;border:1px solid #ABABAB;border-radius: 3px;padding: 4px 8px;margin-right: 15px;margin-bottom: 10px;">中国风</span>
-            
+            <span style="font-size: 14px;display: inline-block;color: #A7A7A7;border:1px solid #ABABAB;border-radius: 3px;padding: 4px 8px;margin-right: 15px;margin-bottom: 10px;" *ngFor="let item of currentType2" (click)="selectTag2(item.code)">{{item.name}}</span>
         </div>
     </div>
-
 </ion-content>
