--- a/src/pages/record-info/record-info.html
+++ b/src/pages/record-info/record-info.html
@@ -1,9 +1,8 @@
-
-    <ion-header>
-        <ion-navbar>
-            <ion-title>日记详情</ion-title>
-        </ion-navbar>
-    </ion-header>
+<ion-header>
+    <ion-navbar>
+        <ion-title>日记详情</ion-title>
+    </ion-navbar>
+</ion-header>
 
 
 <ion-content (pan)="test($event)">
@@ -14,15 +13,15 @@
     </ion-slides>
     <div class='record-wrp'>
         <div class='record-comment'>
-            <p style="font-size: 12px;color: #F6AFAF;">日记</p>
+            <p style="font-size: 12px;color: #F6AFAF;margin:0;margin-top: 5px;margin-bottom: 5px;">日记</p>
             <div style="color: #717171;font-size: 15px;">{{info.title}}</div>
-            <div style="overflow: hidden;">
-                <div style="width: 40px;height: 40px;border-radius: 50%;float: left;overflow: hidden;">
+            <div style="overflow: hidden;margin-top:10px;margin-bottom:10px;">
+                <div style="width: 35px;height: 35px;border-radius: 50%;float: left;overflow: hidden;">
                     <!-- <img src="{{info.avatar}}" style="width: 40px;height: 40px;"> -->
                     <img src="assets/img/guide3.jpg" style="width: 40px;height: 40px;">
                 </div>
-                <span style="font-size: 13px;color: #9D9D9D;">{{info.username}}</span>
-                <span style="display: inline-block;width: 60px;height: 40px;border:1px solid #F7C2C2;border-radius: 3px;font-size: 13px;color: #F18D8D;text-align: center;line-height: 40px;">关注</span>
+                <span style="font-size: 13px;color: #9D9D9D;margin-left:10px;display: inline-block;margin-top: 8px;">{{info.username}}</span>
+                <span style="display: inline-block;width: 60px;height: 25px;border:1px solid #F7C2C2;border-radius: 3px;font-size: 13px;color: #F18D8D;text-align: center;line-height: 25px;float: right;margin-top: 5px;">+ 关注</span>
             </div>
             <div class='record-article'>
                 <p class='acticle-title'>{{info.content}}</p>
@@ -35,6 +34,8 @@
                 </div>
             </div>
         </div>
+        <detailComment type="diary" [id]="globalId" *ngIf="globalId"></detailComment>
+        <div style="height: 55px;width: 100%;"></div>
         <!-- <div class="acticle-reply">
             <div *ngFor="let item of comment" style="padding-top:10px;padding-bottom:10px;border-bottom:1px solid #DEDEDE;">
                 <div class="reply-user">
@@ -72,7 +73,7 @@
                 </button>
             </div>
         </div> -->
-        <div class="acticle-reply" style="padding-bottom: 55px;">
+        <!-- <div class="acticle-reply" style="padding-bottom: 55px;">
             <div *ngFor="let item of comment;index as i;" style="padding-top:10px;padding-bottom:10px;border-bottom:1px solid #DEDEDE;">
                 <div class="reply-user">
                     <div class="reply-head">
@@ -88,9 +89,6 @@
                 </div>
                 <div style="position: relative;padding-left: 46px;">
                     <p (click)="commentDetail(item.id)" class="replycontent">{{item.reply}}</p>
-                    <!-- <div class="mainimg">
-                        <ss-comment-attachments *ngIf="item.plimg.length" [attachments]="item.plimg" [bigImage]="true" style="width: 100%;"></ss-comment-attachments>
-                    </div> -->
                     <div class="commentWrap">
                         <img src="assets/img/comment1.png" class="commentImg" (click)="addComment(i,item.id)">
                         <img src="assets/img/zan.png" class="zanImg" (click)="commentZan(item.id)" *ngIf="!item.commentZan">
@@ -135,10 +133,11 @@
                 <ion-infinite-scroll-content loadingSpinner="bubbles" loadingText="加载中...">
                 </ion-infinite-scroll-content>
             </ion-infinite-scroll>
-        </div>
+        </div> -->
     </div>
     <div style="overflow: hidden;position: fixed;bottom: 0;left: 0;width: 100%;background-color: #fff;height: 50px;padding-top: 10px;padding-bottom: 10px;border-top: 1px solid #EAEAEA;">
-        <div style="float: left;width: 50%;display: inline-block;border-right:1px solid #EAEAEA;height: 30px;line-height: 30px;text-align: center;" (click)="makeComment()">
+        <div style="float: left;width: 50%;display: inline-block;border-right:1px solid #EAEAEA;height: 30px;line-height: 30px;text-align: center;"
+            (click)="makeComment()">
             <img src="assets/img/comment1.png" style="width: 21px;height: 21px;vertical-align: middle">
             <span style="font-size: 14px;color: #9F9F9F;margin-left: 5px;vertical-align: middle;">评论</span>
         </div>
