--- a/src/pages/hotlist/articlehotlist/articlehotlist.html
+++ b/src/pages/hotlist/articlehotlist/articlehotlist.html
@@ -1,22 +1,26 @@
 <ion-content>
-    <div style="padding-left: 15px;padding-right: 15px;padding-bottom: 5px;border-bottom: 1px solid #F5F5F5;margin-top: 10px;">
+    <div style="padding-left: 15px;padding-right: 15px;padding-bottom: 5px;border-bottom: 1px solid #F5F5F5;margin-top: 10px;" *ngFor="let item of articleList;index as i">
         <div style="overflow: hidden;">
-            <span style="float: left;color: #F07E7E;font-size: 14px;margin-top: 2px;margin-right: 2%;">1</span>
+            <span style="float: left;color: #F07E7E;font-size: 14px;margin-top: 2px;margin-right: 2%;">{{i+1}}</span>
             <div style="float: left;margin-right: 2%;width: 73%;">
-                <p style="font-size: 14px;color: #A8A8A8;margin: 0;">容器服务提供高性能可伸缩的容器应用管理服务</p>
-                <p style="color: #D3D3D3;font-size: 13px;overflow: hidden;text-overflow: ellipsis;display: -webkit-box;-webkit-line-clamp: 2;-webkit-box-orient: vertical;margin: 0;margin-top: 3px;">容器服务提供高性能可伸缩的容器应用管理服务容器服务提供高性能可伸缩的容器应用管理服务</p>
+                <p style="font-size: 14px;color: #A8A8A8;margin: 0;">{{item.title}}</p>
+                <p style="color: #D3D3D3;font-size: 13px;overflow: hidden;text-overflow: ellipsis;display: -webkit-box;-webkit-line-clamp: 2;-webkit-box-orient: vertical;margin: 0;margin-top: 3px;">{{item.prefetch_content}}</p>
             </div>
-            <img src="assets/img/guide1.jpg" style="width: 20%;height: 50px;float: left;">
+            <img [src]="item.image_set[0]" style="width: 20%;height: 50px;float: left;">
         </div>
         <div style="overflow: hidden;margin-top: 10px;">
             <div style="float: left;">
                 <img src="assets/img/fire.png" style="width: 15px;height: 18px;margin-right: 5px;vertical-align: middle;">
-                <span style="font-size: 12px;color: #C2C2C2;vertical-align: middle;">200</span>
+                <span style="font-size: 12px;color: #C2C2C2;vertical-align: middle;">{{item.score}}</span>
             </div>
             <div style="float: right;">
                 <img src="assets/img/commenthome.png" style="width: 15px;margin-right: 5px;vertical-align: middle;">
-                <span style="font-size: 12px;color: #C2C2C2;vertical-align: middle;">2000</span>
+                <span style="font-size: 12px;color: #C2C2C2;vertical-align: middle;">{{item.comment_count}}</span>
             </div>
         </div>
     </div>
+    <ion-infinite-scroll (ionInfinite)="doInfinite($event)">
+        <ion-infinite-scroll-content loadingSpinner="bubbles" loadingText="加载中...">
+        </ion-infinite-scroll-content>
+    </ion-infinite-scroll>
 </ion-content>
