--- a/src/pages/hotlist/hotlist.html
+++ b/src/pages/hotlist/hotlist.html
@@ -6,14 +6,8 @@
 <ion-content>
     <div class="slidersWrap">
         <ion-slides pager loop="true">
-            <ion-slide>
-                <img src="assets/img/guide1.jpg">
-            </ion-slide>
-            <ion-slide>
-                <img src="assets/img/guide1.jpg">
-            </ion-slide>
-            <ion-slide>
-                <img src="assets/img/guide1.jpg">
+            <ion-slide *ngFor="let item of slides">
+                <img [src]="item.image">
             </ion-slide>
         </ion-slides>
     </div>
