--- a/src/pages/hotlist/peoplehotlist/peoplehotlist.html
+++ b/src/pages/hotlist/peoplehotlist/peoplehotlist.html
@@ -1,16 +1,20 @@
 <ion-content>
-    <div style="overflow: hidden;padding-left: 15px;padding-right: 15px;margin-top: 10px;border-bottom:1px solid #F2F2F2;padding-bottom: 10px;">
-        <span style="font-size: 12px;color: #F08585;display: inline-block;width: 15px;height: 15px;border-radius: 50%;text-align: center;float: left;border: 1px solid #F08585;margin-top: 17px;margin-right: 10px;">1</span>
+    <div style="overflow: hidden;padding-left: 15px;padding-right: 15px;margin-top: 10px;border-bottom:1px solid #F2F2F2;padding-bottom: 10px;" *ngFor="let item of peopleList;index as i">
+        <span style="font-size: 12px;color: #F08585;display: inline-block;padding:1px 1px;border-radius: 50%;text-align: center;float: left;border: 1px solid #F08585;margin-top: 17px;margin-right: 10px;">{{i+1}}</span>
         <div style="width: 50px;height: 50px;border-radius: 50%;overflow: hidden;float: left;">
-            <img src="assets/img/guide1.jpg" style="width: 50px;height: 50px;">
+            <img [src]="item.avatar" style="width: 50px;height: 50px;">
         </div>
         <div style="float: left;margin-top: 10px;margin-left: 10px;">
-            <p style="font-size: 14px;color: #838383;margin: 0;">做个好学生</p>
-            <p style="font-size: 12px;color: #AFAFAF;margin: 0;">喜剧爱好者</p>
+            <p style="font-size: 14px;color: #838383;margin: 0;">{{item.nickname}}</p>
+            <p style="font-size: 12px;color: #AFAFAF;margin: 0;">{{item.brief}}</p>
         </div>
         <div style="float: right;margin-top: 15px;">
             <img src="assets/img/fire.png" style="width: 15px;vertical-align: middle;">
-            <span style="font-size: 12px;color: #ADADAD;vertical-align: middle;">199万</span>
+            <span style="font-size: 12px;color: #ADADAD;vertical-align: middle;">{{item.hot_score}}</span>
         </div>
     </div>
+    <ion-infinite-scroll (ionInfinite)="doInfinite($event)">
+        <ion-infinite-scroll-content loadingSpinner="bubbles" loadingText="加载中...">
+        </ion-infinite-scroll-content>
+    </ion-infinite-scroll>
 </ion-content>
