--- a/src/pages/home/video/homevideo.html
+++ b/src/pages/home/video/homevideo.html
@@ -6,7 +6,7 @@
         <span class="name">{{videoInfo.username}}</span>
         <span class="time">{{videoInfo.created_at | timeFormat1}}</span>
     </div>
-    <video src="assets/1.mp4" controls="controls" style="width: 100%;" (click)="goDetail()"></video>
+    <!-- <video src="assets/1.mp4" controls="controls" style="width: 100%;" (click)="goDetail()"></video> -->
     <div class="dataWrap">
         <div style="float: left;">
             <img src="assets/img/fire.png" class="fireImg">
