--- a/src/pages/hotlist/topichotlist/topichotlist.html
+++ b/src/pages/hotlist/topichotlist/topichotlist.html
@@ -1,10 +1,10 @@
 <ion-content>
-    <div style="padding-left: 15px;padding-right: 15px;padding-bottom: 5px;border-bottom: 1px solid #F5F5F5;overflow: hidden;">
+    <div style="padding-left: 15px;padding-right: 15px;padding-bottom: 5px;border-bottom: 1px solid #F5F5F5;overflow: hidden;" *ngFor="let item of topicList;index as i">
         <div style="float: left;overflow: hidden;width: 60%;">
             <div style="overflow: hidden;">
-                <span style="float: left;color: #F07E7E;font-size: 14px;margin-top: 2px;margin-right: 2%;">1</span>
+                <span style="float: left;color: #F07E7E;font-size: 14px;margin-top: 2px;margin-right: 2%;">{{i}}</span>
                 <div style="float: left;width: 94%;">
-                    <p style="font-size: 14px;color: #A8A8A8;margin: 0;">容器服务提供高性能可伸缩的容器应用管理服务</p>
+                    <p style="font-size: 14px;color: #A8A8A8;margin: 0;">{{item.title}}</p>
                 </div>
             </div>
             <div style="overflow: hidden;margin-top: 10px;margin-left: 5%;">
@@ -18,6 +18,10 @@
                 </div>
             </div>
         </div>
-        <img src="assets/img/guide1.jpg" style="width: 35%;height: 82px;float: right;">
+        <img [src]="item.cover" style="width: 35%;height: 82px;float: right;">
     </div>
+    <ion-infinite-scroll (ionInfinite)="doInfinite($event)">
+        <ion-infinite-scroll-content loadingSpinner="bubbles" loadingText="加载中...">
+        </ion-infinite-scroll-content>
+    </ion-infinite-scroll>
 </ion-content>
