--- a/src/pages/hotlist/hotlist.html
+++ b/src/pages/hotlist/hotlist.html
@@ -4,13 +4,13 @@
     </ion-navbar>
 </ion-header>
 <ion-content>
-    <div class="slidersWrap">
+    <!-- <div class="slidersWrap">
         <ion-slides pager loop="true">
             <ion-slide *ngFor="let item of slides">
                 <img [src]="item.image">
             </ion-slide>
         </ion-slides>
-    </div>
+    </div> -->
     <ion-tabs tabsPlacement="top" mode="md">
         <ion-tab [root]="articlehotlist" tabTitle="文章"></ion-tab>
         <ion-tab [root]="topichotlist" tabTitle="话题"></ion-tab>
