--- a/src/pages/topic/topic.html
+++ b/src/pages/topic/topic.html
@@ -5,8 +5,8 @@
 </ion-header>
 <ion-content>
     <div class="bannerWrap" [ngStyle]="{'background-image': 'url(assets/img/guide1.jpg)'}">
-        <span style="position: absolute;bottom: 0;left: 0;font-size: 16px;color: #fff;">#恋爱的犀牛</span>
-        <span style="display: inline-block;font-size: 14px;color: #fff;background: #EF7A7A;padding: 5px 10px;position: absolute;bottom: 0;right: 0;">关注话题</span>
+        <span style="position: absolute;bottom: 10px;left: 10px;font-size: 22px;color: #fff;">#恋爱的犀牛</span>
+        <span style="display: inline-block;font-size: 14px;color: #fff;background: #EF7A7A;padding: 8px 18px;position: absolute;bottom: 10px;right: 10px;border-radius: 10px;">关注话题</span>
     </div>
     <ion-tabs tabsPlacement="top" mode="md">
         <ion-tab [root]="topicBrief" tabTitle="简介"></ion-tab>
