--- a/src/pages/topic/topicBrief/topicBrief.html
+++ b/src/pages/topic/topicBrief/topicBrief.html
@@ -1,30 +1,42 @@
-<ion-content>
-    <p style="font-size: 13px;color: #BABABA;">话题简介</p>
-    <p style="background: #fff;padding: 10px 16px;font-size: 14px;color: #8D8D8D;">
+<ion-content style="background: #F8F8F8;">
+    <p style="font-size: 13px;color: #BABABA;margin: 0;padding-left: 16px;margin-top: 10px;margin-bottom: 10px;">话题简介</p>
+    <p style="background: #fff;padding: 10px 16px;font-size: 14px;color: #8D8D8D;margin: 0;">
         众所周知，在 ES 6 之前没有类的概念，所以不能像 Java 中一个 extends 关键字就搞定了继承关系，需要一些 tricks 来实现，下面就介绍一些比较常用的方法。众所周知，在 ES 6 之前没有类的概念，所以不能像 Java 中一个 extends 关键字就搞定了继承关系，需要一些 tricks 来实现，下面就介绍一些比较常用的方法。众所周知，在 ES 6 之前没有类的概念，所以不能像 Java 中一个 extends 关键字就搞定了继承关系，需要一些 tricks 来实现，下面就介绍一些比较常用的方法。众所周知，在 ES 6 之前没有类的概念，所以不能像 Java 中一个 extends 关键字就搞定了继承关系，需要一些 tricks 来实现，下面就介绍一些比较常用的方法。众所周知，在 ES 6 之前没有类的概念，所以不能像 Java 中一个 extends 关键字就搞定了继承关系，需要一些 tricks 来实现，下面就介绍一些比较常用的方法。
     </p>
-    <p style="font-size: 13px;color: #BABABA;">活跃用户</p>
-    <div>
-        <div style="background: #fff;padding:10px 16px;overflow: hidden; ">
-            <img src="assets/guide1.jpg" style="width: 40px;height: 40px;border-radius: 50%;overflow: hidden;float: left;">
-            <div style="float: left;margin-left: 5px;">
-                <p style="font-size: 14px;color: #999999;">喜剧爱好者</p>
-                <p style="font-size: 12px;color: #999999">做个好学生</p>
+    <p style="font-size: 13px;color: #BABABA;margin: 0;padding-left: 16px;margin-bottom: 10px;margin-top: 10px;">活跃用户</p>
+    <div style="background: #fff;">
+        <div style="padding:10px 16px;overflow: hidden; ">
+            <img src="assets/img/guide1.jpg" style="width: 35px;height: 35px;border-radius: 50%;overflow: hidden;float: left;">
+            <div style="float: left;margin-left: 10px;">
+                <p style="font-size: 14px;color: #999999;margin: 0;">喜剧爱好者</p>
+                <p style="font-size: 12px;color: #999999;margin: 0;">做个好学生</p>
             </div>
-            <span style="font-size: 13px;display: inline-block;color: #F4A9A9;border: 1px solid #F4A9A9;padding: 5px 10px;float: right;">+关注</span>
+            <span style="font-size: 13px;display: inline-block;color: #F4A9A9;border: 1px solid #F4A9A9;padding: 4px 10px;float: right;border-radius: 3px;">+关注</span>
         </div>
-        <p style="font-size: 12px;color: #CDCDCD;">30篇相关文章，4350位用户关注了她</p>
+        <p style="font-size: 12px;color: #CDCDCD;margin: 0;margin-left: 16px;padding-bottom: 10px;">30篇相关文章，4350位用户关注了她</p>
     </div>
-    <p style="font-size: 14px;color: #999999;text-align: center;height: 20px;line-height: 20px;background: #fff;">更多>></p>
-    <div style="margin-top: 20px;">
-        <div style="margin-left: 16px;margin-right: 16px;border-bottom: 1px solid #F2F2F2;">
-            <div>
-                <img src="assets/img/guide1.jpg" style="width: 50px;height: 50px;float: left;">
-                <div style="float: left;margin-left: 5px;">
-                    <p style="font-size: 14px;color: #999999;">喜剧</p>
-                    <p style="font-size: 12px;color: #B9B9B9;">721人关注</p>
+    <p style="font-size: 14px;color: #999999;text-align: center;height: 28px;line-height: 28px;background: #fff;margin: 0;margin-top: 5px;">更多>></p>
+    <p style="font-size: 13px;color: #BABABA;margin: 0;padding-left: 16px;margin-bottom: 10px;margin-top: 10px;">相关话题</p>
+    <div style="padding-bottom: 20px;">
+        <div style="padding-left: 16px;padding-right: 16px;border-bottom: 1px solid #F2F2F2;background: #fff;">
+            <div style="overflow: hidden;padding-top: 10px;">
+                <img src="assets/img/guide1.jpg" style="width: 40px;height: 40px;float: left;">
+                <div style="float: left;margin-left: 10px;">
+                    <p style="font-size: 14px;color: #999999;margin: 0;margin-top: 1px;">喜剧</p>
+                    <p style="font-size: 12px;color: #B9B9B9;margin: 0;margin-top: 3px;">721人关注</p>
                 </div>
-                <span style="font-size: 13px;color: #F4A9A9;display: inline-block;border: 1px solid #F4A9A9;float: right;padding: 5px 10px;">+关注</span>
+                <span style="font-size: 13px;color: #F4A9A9;display: inline-block;border: 1px solid #F4A9A9;float: right;padding: 4px 10px;border-radius: 3px;">+关注</span>
+            </div>
+            <p style="font-size: 13px;color: #C9C9C9;">简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介</p>
+        </div>
+        <div style="padding-left: 16px;padding-right: 16px;border-bottom: 1px solid #F2F2F2;background: #fff;">
+            <div style="overflow: hidden;padding-top: 10px;">
+                <img src="assets/img/guide1.jpg" style="width: 40px;height: 40px;float: left;">
+                <div style="float: left;margin-left: 10px;">
+                    <p style="font-size: 14px;color: #999999;margin: 0;margin-top: 1px;">喜剧</p>
+                    <p style="font-size: 12px;color: #B9B9B9;margin: 0;margin-top: 3px;">721人关注</p>
+                </div>
+                <span style="font-size: 13px;color: #F4A9A9;display: inline-block;border: 1px solid #F4A9A9;float: right;padding: 4px 10px;border-radius: 3px;">+关注</span>
             </div>
             <p style="font-size: 13px;color: #C9C9C9;">简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介</p>
         </div>
