--- a/src/pages/hotlist/peoplehotlist/peoplehotlist.html
+++ b/src/pages/hotlist/peoplehotlist/peoplehotlist.html
@@ -1,12 +1,14 @@
 <ion-content>
-    <div style="overflow: hidden;padding-left: 15px;padding-right: 15px;margin-top: 10px;border-bottom:1px solid #F2F2F2;padding-bottom: 10px;" *ngFor="let item of peopleList;index as i">
-        <span style="font-size: 12px;color: #F08585;display: inline-block;padding:1px 1px;border-radius: 50%;text-align: center;float: left;border: 1px solid #F08585;margin-top: 17px;margin-right: 10px;">{{i+1}}</span>
-        <div style="width: 50px;height: 50px;border-radius: 50%;overflow: hidden;float: left;">
-            <img [src]="item.avatar" style="width: 50px;height: 50px;">
+    <div style="overflow: hidden;padding-left: 15px;padding-right: 15px;margin-top: 15px;border-bottom:1px solid #F2F2F2;padding-bottom: 15px;" *ngFor="let item of peopleList;index as i">
+        <span style="font-size: 12px;color: #F08585;display: inline-block;border-radius: 50%;text-align: center;float: left;border: 1px solid #F08585;margin-top: 12px;margin-right: 10px;width: 20px;height: 20px;line-height: 18px;">{{i+1}}</span>
+        <div style="width: 40px;height: 40px;border-radius: 50%;overflow: hidden;float: left;">
+            <img [src]="item.avatar" style="width: 40px;height: 40px;">
         </div>
-        <div style="float: left;margin-top: 10px;margin-left: 10px;">
-            <p style="font-size: 14px;color: #838383;margin: 0;">{{item.nickname}}</p>
-            <p style="font-size: 12px;color: #AFAFAF;margin: 0;">{{item.brief}}</p>
+        <div style="float: left;margin-top: 3px;margin-left: 10px;width: 60%;">
+            <p style="font-size: 14px;color: #838383;margin: 0;overflow: hidden;text-overflow: ellipsis;display: -webkit-box;-webkit-line-clamp: 1;
+            -webkit-box-orient: vertical;">{{item.nickname}}</p>
+            <p style="font-size: 12px;color: #AFAFAF;margin: 0;overflow: hidden;text-overflow: ellipsis;display: -webkit-box;-webkit-line-clamp: 1;
+            -webkit-box-orient: vertical;margin-top: 5px;">{{item.brief}}</p>
         </div>
         <div style="float: right;margin-top: 15px;">
             <img src="assets/img/fire.png" style="width: 15px;vertical-align: middle;">
