--- a/src/pages/hotlist/topichotlist/topichotlist.html
+++ b/src/pages/hotlist/topichotlist/topichotlist.html
@@ -1,13 +1,13 @@
 <ion-content>
-    <div style="padding-left: 15px;padding-right: 15px;padding-bottom: 5px;border-bottom: 1px solid #F5F5F5;overflow: hidden;" *ngFor="let item of topicList;index as i">
-        <div style="float: left;overflow: hidden;width: 60%;">
+    <div style="padding-left: 15px;padding-right: 15px;padding-bottom: 15px;padding-top:15px;border-bottom: 1px solid #F5F5F5;overflow: hidden;" *ngFor="let item of topicList;index as i" (click)="goTopicDetail(item.id)">
+        <div style="float: left;overflow: hidden;width: 60%;height: 82px;position: relative;">
             <div style="overflow: hidden;">
-                <span style="float: left;color: #F07E7E;font-size: 14px;margin-top: 2px;margin-right: 2%;">{{i}}</span>
-                <div style="float: left;width: 94%;">
+                <span style="float: left;color: #F07E7E;font-size: 17px;margin-top: -1px;margin-right: 2%;">{{i}}</span>
+                <div style="float: left;width: 90%;">
                     <p style="font-size: 14px;color: #A8A8A8;margin: 0;">{{item.title}}</p>
                 </div>
             </div>
-            <div style="overflow: hidden;margin-top: 10px;margin-left: 5%;">
+            <div style="overflow: hidden;position: absolute;bottom: 0;left: 5%;width: 100%;">
                 <div style="float: left;">
                     <img src="assets/img/fire.png" style="width: 15px;height: 18px;margin-right: 5px;vertical-align: middle;">
                     <span style="font-size: 12px;color: #C2C2C2;vertical-align: middle;">200</span>
